2009-10-24  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Release 1.0.5

2009-04-01  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* Release 1.0.4

2009-03-13  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Release 1.0.3

2009-03-12  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Release 1.0.2

2009-03-08  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Release 1.0.1

2009-03-07  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* eventcounter.1, eventgenerator.1, eventlogger.1, eventselect.1,
	eventselect.1, eventsink.1, eventsource.1, viewevents.1: New
	files.

	* Makefile.am: Added rules for creation of music manual.