@@ -5,6 +5,14 @@ dist_man1_MANS = music.1 eventcounter.1 eventgenerator.1 eventlogger.1 \
 
 EXTRA_DIST = music-manual.pdf
 
+figures = figures/multisim.pdf \
+	  figures/datamapping.pdf \
+	  figures/ticklogic.pdf \
+	  figures/ticklogic2.pdf \
+	  figures/timeline.pdf \
+	  figures/remapping.pdf \
+	  figures/remapping2.pdf
+
 CLEANFILES = music-manual.aux \
 	     music-manual.bbl \
 	     music-manual.blg \
@@ -14,15 +22,11 @@ CLEANFILES = music-manual.aux \
 	     music-manual.lof \
 	     music-manual.log \
 	     music-manual.toc \
-	     music-manual.stamp1
+	     music-manual.stamp1 \
+	     $(figures)
 
-figures = figures/multisim.pdf \
-	  figures/datamapping.pdf \
-	  figures/ticklogic.pdf \
-	  figures/ticklogic2.pdf \
-	  figures/timeline.pdf \
-	  figures/remapping.pdf \
-	  figures/remapping2.pdf
+linked_mans = eventgenerator.1 eventlogger.1 eventselect.1 eventsink.1 \
+	      eventsource.1 viewevents.1
 
 music-manual.pdf: music-manual.bbl music-manual.ind
 	pdflatex music-manual
@@ -40,3 +44,6 @@ music-manual.stamp1: music-manual.tex $(figures)
 
 $(figures): figures/%.pdf : figures/%.asy
 	asy -f pdf -o $@ $<
+
+$(linked_mans):
+	ln eventcounter.1 $@
